objects/LMS_Product_Certifications__c.object
<CustomObject>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certification</label>
        <referenceTo>LMS_Certification__c</referenceTo>
        <relationshipLabel>Product Certifications</relationshipLabel>
        <relationshipName>Product_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Eligibility__c</fullName>
        <label>Eligibility Requirement</label>
        <referenceTo>LMS_Product_Eligibility__c</referenceTo>
        <relationshipLabel>Product Certifications</relationshipLabel>
        <relationshipName>Product_Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Product_Eligibility__r.ProductLine__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <label>Product Certifications</label>
    <listViews>
        <fullName>All_Product_Certifications</fullName>
        <columns>NAME</columns>
        <columns>Certification__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Eligibility__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Certifications</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REQ-{0}</displayFormat>
        <label>Product Certifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>